@@ -25,7 +25,8 @@
 defined('MOODLE_INTERNAL') || die();
 
 $string['cannotopentempfile'] = 'Cannot open temporary file <b>{$a}</b>';
-$string['encodedimagewarning'] = 'Warning: this file contains encoded images. See <a href="http://www.moodle2word.net/mod/page/view.php?id=143">more information on how to convert them back into embedded images</a>.';
+$string['embeddedimageswarning'] = 'Warning: this file must be opened using Word 2020 or Word 365 in order to handle embedded images correctly.';
+$string['encodedimageswarning'] = 'Warning: this file contains encoded images. See <a href="http://www.moodle2word.net/mod/page/view.php?id=143">more information on how to convert them back into embedded images</a>.';
 $string['exportbook'] = 'Export book to Microsoft Word';
 $string['exportchapter'] = 'Export this chapter to Microsoft Word';
 $string['importchapters'] = 'Import from Microsoft Word';
